--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,9 +19,9 @@ jobs:
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
-        #with:
-        #  username: ${{ secrets.DOCKERHUB_USERNAME }}
-        #  password: ${{ secrets.DOCKERHUB_TOKEN }}
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -32,4 +32,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-        #  tags: ${{ secrets.DOCKERHUB_USERNAME }}/paperless-ngx-f2b:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/paperless-ngx-f2b:latest
